<resources>
    <plurals name="track">
        <item quantity="one">трек</item>
        <item quantity="few">трека</item>
        <item quantity="many">треков</item>
        <item quantity="other">треков</item>
    </plurals>
    <plurals name="minute">
        <item quantity="one">минута</item>
        <item quantity="few">минуты</item>
        <item quantity="many">минут</item>
        <item quantity="other">минут</item>
    </plurals>
    <string name="app_name">PlaylistMaker</string>
    <string name="main_toolbar_title">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="write_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="type_share_text">text/plain</string>
    <string name="email_theme">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="email_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="url_mail">mailto:</string>
    <string name="no_web">Проблемы со связью\n\nЗагрузка не удалась.
        Проверьте подключение к интернету</string>
    <string name="no_content">Ничего не нашлось</string>
    <string name="update">Обновить</string>
    <string name="search_text">search_text</string>
    <string name="hint">Вы искали</string>
    <string name="history_clear">Очистить историю</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="artist_name">Имя артиста</string>
    <string name="track_name">Название трека</string>
    <string name="start_track_time">00:00</string>
    <string name="playlist_create">Плэйлист создан</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="no_favorite_tracks">Ваша медиатека пуста</string>
    <string name="no_playlists">Вы не создали \n ни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="playlist_name">Название*</string>
    <string name="playlist_description">Описание</string>
    <string name="playlist_button_text">Создать</string>
    <string name="confirmation_dialog_title">Завершить создание плейлиста?</string>
    <string name="confirmation_dialog_message">Все несохраненные данные будут потеряны</string>
    <string name="confirmation_dialog_negative">Отмена</string>
    <string name="confirmation_dialog_positive">Завершить</string>
    <string name="playlist_created_snackbar">Плейлист %1$s создан</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="added_to_playlist">Добавлено в плейлист %1$s</string>
    <string name="track_already_in_playlist">Трек уже добавлен в плейлист %1$s</string>
    <string name="playlist_tracks_info">%1$s · %2$s</string>
    <string name="no_tracks_in_playlist">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="no_tracks">Ваш плейлист пуст</string>
    <string name="delete_track_dialog_title">Удалить трек</string>
    <string name="delete_track_dialog_message">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="delete_track_dialog_positive">Удалить</string>
    <string name="playlist_menu_share">Поделиться</string>
    <string name="playlist_menu_edit">Редактировать информацию</string>
    <string name="playlist_menu_delete">Удалить плейлист</string>
    <string name="delete_playlist_dialog_title">Удалить плейлист</string>
    <string name="delete_playlist_dialog_message">Хотите удалить плейлист %1$s?</string>
    <string name="delete_playlist_dialog_positive">Да</string>
    <string name="delete_playlist_dialog_negative">Нет</string>
    <string name="edit">Редактировать</string>
    <string name="save">Сохранить</string>
</resources>