<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarSettings"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:title="@string/settings"
        app:titleTextColor="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_toolbar"
        android:orientation="vertical"
        android:paddingStart="16dp">

        <Switch
            android:id="@+id/switchTheme"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:paddingEnd="6dp"
            android:text="@string/dark_theme"
            android:fontFamily="@font/ys_display_medium"
            android:textSize="16sp" />

        <Button
            android:id="@+id/buttonShareApp"
            android:text="@string/share_app"
            style="@style/App.Button.Setting"
            app:drawableEndCompat="@drawable/ic_share" />

        <Button
            android:id="@+id/buttonWriteSupport"
            style="@style/App.Button.Setting"
            android:text="@string/write_support"
            app:drawableEndCompat="@drawable/ic_support" />

        <Button
            android:id="@+id/buttonUserAgreement"
            style="@style/App.Button.Setting"
            android:text="@string/user_agreement"
            app:drawableEndCompat="@drawable/ic_arrow_right" />

    </LinearLayout>

</LinearLayout>