<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorNavTabBackground">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarSettings"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="@string/settings"
        app:titleTextColor="@color/colorTextToolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_toolbar"
        android:orientation="vertical"
        android:paddingStart="16dp"
        tools:ignore="RtlSymmetry">
        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/themeSwither"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:fontFamily="@font/ys_display_medium"
            android:textSize="16sp"
            android:textStyle="normal"
            android:paddingLeft="0dp"
            android:text="@string/dark_theme" />

        <Button
            android:id="@+id/buttonShareApp"
            style="@style/App.Button.Setting"
            android:text="@string/share_app"
            android:foreground="?attr/selectableItemBackground"
            app:drawableEndCompat="@drawable/ic_share"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/buttonWriteSupport"
            style="@style/App.Button.Setting"
            android:text="@string/write_support"
            android:foreground="?attr/selectableItemBackground"
            app:drawableEndCompat="@drawable/ic_support"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/buttonUserAgreement"
            style="@style/App.Button.Setting"
            android:text="@string/user_agreement"
            android:foreground="?attr/selectableItemBackground"
            app:drawableEndCompat="@drawable/ic_arrow_right"
            tools:ignore="VisualLintButtonSize" />

    </LinearLayout>

</LinearLayout>