<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color_LinearLayoutMain"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarMain"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/main_toolbar_title"
        app:titleTextColor="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="@dimen/margin_top_toolbar"
        android:layout_marginBottom="28dp"
        android:divider="@drawable/divider"
        android:orientation="vertical"
        android:showDividers="middle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarMain">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSearch"
            style="@style/App.Button.Main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/search"
            app:icon="@drawable/ic_search"
            tools:ignore="VisualLintButtonSize" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonMedia"
            style="@style/App.Button.Main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/media"
            app:icon="@drawable/ic_media"
            tools:ignore="VisualLintButtonSize" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSettings"
            style="@style/App.Button.Main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/settings"
            app:icon="@drawable/ic_settings"
            tools:ignore="VisualLintButtonSize" />
    </LinearLayout>

</LinearLayout>